--- a/bids.html
+++ b/bids.html
@@ -51,7 +51,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      animation: scroll-up 80s linear infinite;
+      animation: scroll-up 70s linear infinite;
       will-change: transform;
     }
 
@@ -105,7 +105,7 @@
 
     @keyframes scroll-up {
       0% {
-        transform: translateY(100%);
+        transform: translateY(0);
       }
       100% {
         transform: translateY(-100%);
