--- a/bids.html
+++ b/bids.html
@@ -48,11 +48,10 @@
     }
 
     .ticker {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      animation: scroll-up 70s linear infinite;
-      will-change: transform;
+      animation: scroll-up 60s linear infinite;
+      padding-top: 40vh;          
+      padding-bottom: 40vh;     
+      box-sizing: border-box;
     }
 
     .project {
