--- a/bids.html
+++ b/bids.html
@@ -48,12 +48,13 @@
     }
 
     .ticker {
-      animation: scroll-up 60s linear infinite;
-      padding-top: 40vh;          
-      padding-bottom: 40vh;     
-      box-sizing: border-box;
-    }
-
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      animation: scroll-up 80s linear infinite;
+      will-change: transform;
+    }    
+    
     .project {
       background: rgba(255,255,255,0.08);
       backdrop-filter: blur(6px);
@@ -104,10 +105,10 @@
 
     @keyframes scroll-up {
       0% {
-        transform: translateY(0);
+        transform: translateY(80%);
       }
       100% {
-        transform: translateY(-100%);
+        transform: translateY(-80%);
       }
     }
 
