--- a/bids.html
+++ b/bids.html
@@ -139,29 +139,11 @@
     </div>
 
     <div class="project">
-    <a href="https://bceva.virtualplanroom.net/Project/Detail/2025-6BB9" target="_blank">
-      <div class="project-name">Joseph W Luter Jr Sports Complex - Parks Maintenance Building</div>
-      <div class="project-detail">📍 Smithfield, VA</div>
-      <div class="project-detail">Bid Date: <span class="bid-date">01/29/2026 02:00pm EST</span></div>
-      <div class="project-detail"><a href="https://bceva.virtualplanroom.net/Project/Detail/2025-6BB9" target="_blank">View Project →</a></div>
-    </a>
-    </div>
-
-    <div class="project">
     <a href="https://bceva.virtualplanroom.net/Project/Detail/2025-6C2B" target="_blank">
       <div class="project-name">Section W Force Main Replacement</div>
       <div class="project-detail">📍 Norfolk, VA</div>
       <div class="project-detail">Bid Date: <span class="bid-date">01/29/2026 02:00pm EST</span></div>
       <div class="project-detail"><a href="https://bceva.virtualplanroom.net/Project/Detail/2025-6C2B" target="_blank">View Project →</a></div>
-    </a>
-    </div>
-
-    <div class="project">
-    <a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0191" target="_blank">
-      <div class="project-name">RFP - Pool Maintenance SuffolkVA</div>
-      <div class="project-detail">📍 Suffolk, VA</div>
-      <div class="project-detail">Bid Date: <span class="bid-date">02/03/2026 03:00pm EST</span></div>
-      <div class="project-detail"><a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0191" target="_blank">View Project →</a></div>
     </a>
     </div>
 
@@ -193,11 +175,11 @@
     </div>
 
     <div class="project">
-    <a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0642" target="_blank">
-      <div class="project-name">Portsmouth Public Schools - Athletic Fields Maintenance and Related Services</div>
-      <div class="project-detail">📍 Portsmouth, VA</div>
-      <div class="project-detail">Bid Date: <span class="bid-date">02/18/2026 02:00pm EST</span></div>
-      <div class="project-detail"><a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0642" target="_blank">View Project →</a></div>
+    <a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0746" target="_blank">
+      <div class="project-name">Annual Renewable Indefinite Quantity Construction Contract For Maintenance and Repair of Stormwater Pump Stations</div>
+      <div class="project-detail">📍 Virginia Beach, VA</div>
+      <div class="project-detail">Bid Date: <span class="bid-date">02/17/2026 03:00pm EST</span></div>
+      <div class="project-detail"><a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0746" target="_blank">View Project →</a></div>
     </a>
     </div>
 
