--- a/bids.html
+++ b/bids.html
@@ -201,6 +201,15 @@
     </a>
     </div>
 
+    <div class="project">
+    <a href="https://bceva.virtualplanroom.net/Project/Detail/2026-07FA" target="_blank">
+      <div class="project-name">RFQ Stormwater Ditch Clearing at New Church and Route 13VA</div>
+      <div class="project-detail">📍 Accomac, VA</div>
+      <div class="project-detail">Bid Date: <span class="bid-date">02/20/2026 05:00pm EST</span></div>
+      <div class="project-detail"><a href="https://bceva.virtualplanroom.net/Project/Detail/2026-07FA" target="_blank">View Project →</a></div>
+    </a>
+    </div>
+
   </div>
 </div>
 
