--- a/bids.html
+++ b/bids.html
@@ -201,6 +201,42 @@
     </a>
     </div>
 
+    <div class="project">
+    <a href="https://bceva.virtualplanroom.net/Project/Detail/2025-460F" target="_blank">
+      <div class="project-name">FEDERAL - Naval Station Norfolk - DB - Piers 12 and 14 Sanitary Sewer Replacement</div>
+      <div class="project-detail">📍 Norfolk, VA</div>
+      <div class="project-detail">Bid Date: <span class="bid-date">02/26/2026 02:00pm EST</span></div>
+      <div class="project-detail"><a href="https://bceva.virtualplanroom.net/Project/Detail/2025-460F" target="_blank">View Project →</a></div>
+    </a>
+    </div>
+
+    <div class="project">
+    <a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0909" target="_blank">
+      <div class="project-name">Pump Station 65 Rehabilitation NorfolkVA</div>
+      <div class="project-detail">📍 Norfolk, VA</div>
+      <div class="project-detail">Bid Date: <span class="bid-date">03/04/2026 03:00pm EST</span></div>
+      <div class="project-detail"><a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0909" target="_blank">View Project →</a></div>
+    </a>
+    </div>
+
+    <div class="project">
+    <a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0A66" target="_blank">
+      <div class="project-name">Atlantic Ave Water Meter Vault Replacements</div>
+      <div class="project-detail">📍 Virginia Beach, VA</div>
+      <div class="project-detail">Bid Date: <span class="bid-date">03/04/2026 03:00pm EST</span></div>
+      <div class="project-detail"><a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0A66" target="_blank">View Project →</a></div>
+    </a>
+    </div>
+
+    <div class="project">
+    <a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0A3C" target="_blank">
+      <div class="project-name">FEDERAL - Naval Station Norfolk - Design-Bid-Build - Aircraft Laydown Facilities</div>
+      <div class="project-detail">📍 Norfolk, VA</div>
+      <div class="project-detail">Bid Date: <span class="bid-date">03/12/2026 02:00pm EST</span></div>
+      <div class="project-detail"><a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0A3C" target="_blank">View Project →</a></div>
+    </a>
+    </div>
+
   </div>
 </div>
 
