--- a/bids.html
+++ b/bids.html
@@ -130,15 +130,6 @@
 <div class="ticker-wrapper">
   <div class="ticker">
     <div class="project">
-    <a href="https://bceva.virtualplanroom.net/Project/Detail/2025-6C2B" target="_blank">
-      <div class="project-name">Section W Force Main Replacement</div>
-      <div class="project-detail">📍 Norfolk, VA</div>
-      <div class="project-detail">Bid Date: <span class="bid-date">02/03/2026 02:00pm EST</span></div>
-      <div class="project-detail"><a href="https://bceva.virtualplanroom.net/Project/Detail/2025-6C2B" target="_blank">View Project →</a></div>
-    </a>
-    </div>
-
-    <div class="project">
     <a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0716" target="_blank">
       <div class="project-name">RFQ - Stormwater Ditch Clearing at Route 13 and Pitts Creek</div>
       <div class="project-detail">📍 Church, VA</div>
@@ -211,6 +202,15 @@
     </div>
 
     <div class="project">
+    <a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0B00" target="_blank">
+      <div class="project-name">RFQ - New Gloucester Volunteer Fire Rescue Squad Station 1r</div>
+      <div class="project-detail">📍 Gloucester, VA</div>
+      <div class="project-detail">Bid Date: <span class="bid-date">03/03/2026 04:00pm EST</span></div>
+      <div class="project-detail"><a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0B00" target="_blank">View Project →</a></div>
+    </a>
+    </div>
+
+    <div class="project">
     <a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0909" target="_blank">
       <div class="project-name">Pump Station 65 Rehabilitation NorfolkVA</div>
       <div class="project-detail">📍 Norfolk, VA</div>
@@ -221,7 +221,7 @@
 
     <div class="project">
     <a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0A66" target="_blank">
-      <div class="project-name">Atlantic Ave Water Meter Vault Replacements</div>
+      <div class="project-name">Atlantic Ave Water Meter Vault Replacements Phase 3</div>
       <div class="project-detail">📍 Virginia Beach, VA</div>
       <div class="project-detail">Bid Date: <span class="bid-date">03/04/2026 03:00pm EST</span></div>
       <div class="project-detail"><a href="https://bceva.virtualplanroom.net/Project/Detail/2026-0A66" target="_blank">View Project →</a></div>
